@@ -22,5 +22,6 @@
 	<string id="30005">General Per Page</string>
 	<string id="30007">Popular/Recent/Featured Per Page</string>
 	<string id="30008">Alphabetical Per Page</string>
+	<string id="30009">Search Results</string>
 	<string id="30006">Enable Hulu Plus</string>
 </strings>
